adjust menu spacing on mobile to prevent hover indicator from hiding behind other menu option

--- a/wp-content/themes/suffolkdown/assets/styles/media.css
+++ b/wp-content/themes/suffolkdown/assets/styles/media.css
@@ -239,7 +239,7 @@
 	}
 
 	#primary-menu > .menu-item {
-		height: 60px;
+		height: 70px;
 	}
 }
 
